Portfolio Website/src/App.scss
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.bg-image {
    z-index: -1;
    position: absolute;
    height: 100%;
    width: 100%;
    background-image: url('assets/su-san-lee-E_eWwM29wfU-unsplash\(2\).jpg');
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    filter:brightness(60%)
}

.main-container {
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: row;
    font-family: 'Courier New', Courier, monospace;
}

.fade-in-section {
    opacity: 0;
    transform: translateY(20vh);
    visibility: hidden;
    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
    will-change: opacity, visibility;
}
.fade-in-section.is-visible {
    opacity: 1;
    transform: none;
    visibility: visible;
}


@keyframes fadeIn {
    0% {
        transform: translateY(100%);
        opacity: 0;
    }
    100% {
        transform: translateY(0%);
        opacity: 1;
    }
}

.item-container {
    display: flex;
    flex-direction: column;
    width: 60vw;
    height: 60vh;
    margin-top: 6vh;
    color: #fff;
}
.main-text {
    font-size: 4rem;
    animation: fadeIn 1.5s;
    letter-spacing: -3px;
    width: 30vw;
}
.main-text2 {
    margin-top: 70px;
    letter-spacing: -1px;
    font-size: 1.8rem;
    animation: fadeIn 1.2s 1s both;
    color: #fff;
}
.projects-button {
    margin-top: 30px;
    height: 25px;
    width: 10vw;
}

.text {
    color: #00ccff;
    margin-left: 15px;
    text-shadow: 2px 2px 2px #c4f3ff;
}
.nav-container{
    position: fixed;
    height: 7vh;
    width: 100vw;
    display: flex;
    justify-content: center;
}
.nav-bar {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    width: 35vw;
    display: flex;
    justify-content: space-around;
    list-style: none;
    font-size: 1.1rem;
    margin: 20px;
    color: #fff;
}

.nav-bar li:hover {
    border-bottom: #fff solid 1px;
    cursor: pointer;
}
.logo-container {
    width: 55vw;
    margin-right: 20px;
}
.logo {
    width: 45px;
    height: 45px;
    margin-top: 4.5px;
    background-image: url(assets/noun-japan-5090284.svg);
    background-repeat: no-repeat;
    background-size: cover;
}
.logo:hover {
    cursor: pointer;
}
.about-section-container{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    background: #222;
}
.about-section {
    display: grid;
    grid-template-columns: 25vw 25vw 25vw;
    grid-template-rows: auto;
    color: white;
    font-size: .8rem;
    column-gap: 50px;
    row-gap: 20px;
    color: #c7c7c7;;
}
.item-1 {
    color: #00ccff;
    font-style: italic;
    grid-row: 1/2;
    grid-column: 1/2;
    font-size: 2rem;
    padding-bottom: 10px;
    border-bottom: solid 1px #c7c7c7;
}
.item-2 {
    grid-row: 2/3;
    grid-column: 1/2;
    font-size: 1.2rem;
}
.item-3 {
    color: #00ccff;
    font-style: italic;
    font-size: 2rem;
    grid-row: 1/2;
    grid-column: 2/3;
    padding-bottom: 10px;
    border-bottom: solid 1px #c7c7c7;
}
.item-4 {
    grid-row: 2/3;
    grid-column: 2/3;
    font-size: 1.2rem;
}
.item-5 {
    color: #00ccff;
    font-style: italic;
    font-size: 2rem;
    grid-row: 1/2;
    grid-column: 3/4;
    padding-bottom: 10px;
    border-bottom: solid 1px white;
}
.item-6 {
    grid-row: 2/3;
    grid-column: 3/4;
    font-size: 1.2rem;
}
.project-section{
    z-index: -1;
    height: 100vh;
    background: #111;
}

.project-text {
    position: relative;
    top: 10vh;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2.5rem;
    color: #fff;
}

.projects > * {
    box-shadow: 4px 4px 5px #00ccff;
    width: 30vw;
    height: 30vh;
    border-radius: 15px;
    filter: brightness(80%);
}

.projects {
    display: grid;
    margin-top: 20vh;
    justify-content: center;
    gap: 25px;
    grid-template-areas: " a a b b c c "
                         " . d d e e . ";
}
.image-1{
    filter:brightness(90%);
    content:url(../src/assets/calc.png);
    grid-area: a
}
.image-2 {
    content:url(../src/assets/library.png);
    grid-area: b
}
.image-3 {
    content:url(../src/assets/sketch.png);
    grid-area: c
}
.image-4 {
    content:url(../src/assets/tic.png);
    grid-area: d
}
.image-5 {
    content:url(../src/assets/memory.png);
    grid-area: e
}

@media only screen and (max-width: 1600px)  {
    .projects {
        grid-template-areas: " . a a b b . "
                             " . d d e e . "
                             " . . c c . . ";
    }
    .project-section {
        height: 130vh;
    }
    .projects > * {
        max-height: 25vh;
        min-width: 30vw;
    }
}
@media only screen and (max-width: 1300px) { 
    .projects > * {
        max-height: 18vh;
        max-width: 30vw;
    }
}


@media only screen and (max-width: 850px) {
    .main-text {
        font-size: 2.5rem;
    }
    .main-text2 {
        font-size: 1.4rem;
    }
    .nav-bar {
        font-size: 1rem;
        gap: 3vw;
        margin-right: 10vw;
    }
    .logo {
        margin-left: 10px;
    }
    .about-section {
        display: flex;
        flex-direction: column;
        margin-left: 100px;
        margin-right: 100px;
    }
    .bg-image {
        background-position: right;
    }
    .project-section {
        height: 195vh;
    }
    .projects {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 5vh;
    }
    .projects > * {
        min-height: 25vh;
        min-width: 40vw;
    }
}

